# ArenaSync

./: .gitignore  ARENAFLOW_PROJECT_REPORT.md  Dockerfile  PROJECT_STATUS.md  README.md  cloudbuild.yaml  database.rules.json  firebase.json  package-lock.json  railway.toml  skills-lock.json
.github/workflows/: ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
arenaflow/: .firebaserc  Dockerfile.backend  LINKEDIN_POST.md  README.md  cloud_run_env_checklist.md  cloudbuild.yaml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  linkedin_post_draft.md
arenaflow/.github/workflows/: ci.yml
arenaflow/backend/: .env.example  Dockerfile.backend  check_user.py  pyproject.toml  railway_env_checklist.md  requirements.txt  requirements_no_prophet.txt  test_delete_alert.py  test_login.py  token.json
arenaflow/backend/app/: main.py
arenaflow/backend/app/api/v1/routes/: alerts.py  auth.py  crowd.py  food.py  health.py  maps.py  ml.py  queue.py  translate.py  virtual_queue.py
arenaflow/backend/app/core/: config.py  dependencies.py  firebase.py  logger.py  redis_client.py  security.py
arenaflow/backend/app/db/: base.py  init_db.py  session.py
arenaflow/backend/app/models/: alert.py  crowd_snapshot.py  queue_entry.py  user.py  venue.py  virtual_queue.py  zone.py
arenaflow/backend/app/schemas/: alert.py  crowd.py  food.py  queue.py  user.py  venue.py  virtual_queue.py
arenaflow/backend/app/services/: alert_service.py  crowd_service.py  food_service.py  maps_service.py  queue_service.py  translate_service.py  virtual_queue_service.py
arenaflow/backend/app/services/ml/: crowd_model.py  gemini_service.py  prophet_engine.py
arenaflow/backend/app/websocket/: handlers.py  manager.py
arenaflow/backend/app/worker/: __init__.py  scheduler.py  tasks.py
arenaflow/backend/migrations/: env.py
arenaflow/backend/migrations/versions/: 0001_initial_schema.py  0002_virtual_queue.py  0003_dummy_recovery.py
arenaflow/backend/scripts/: create_specific_user.py  promote_user.py  run_migrations.sh  seed_alerts.py  seed_demo.py  test_maps_500.py  update_venue.py
arenaflow/backend/tests/: conftest.py  test_auth.py  test_crowd.py  test_integration.py  test_maps.py  test_ml_engine.py  test_queue.py
arenaflow/frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.ts  test-puppeteer.js  test_errors.js  test_firebase.js  test_local.js  tsconfig.json  vercel.json  vercel_env_checklist.md  vite.config.ts
arenaflow/frontend/public/: site.webmanifest
arenaflow/frontend/src/: App.tsx  firebase.ts  index.css  main.tsx
arenaflow/scripts/: build_and_deploy_frontend.sh  deploy.sh  firebase_setup.sh  gcloud_setup.sh  github_secrets_setup.md  smoke_test.sh
dataconnect/: dataconnect.yaml  seed_data.gql
dataconnect/example/: connector.yaml  queries.gql
dataconnect/schema/: schema.gql
functions/: package-lock.json  package.json
src/dataconnect-generated/: README.md  index.cjs.js  index.d.ts
src/dataconnect-generated/.guides/: usage.md
(+43 files in other folders)
